# capybara

./: Cargo.toml  LICENSE  README.md  build.rs
locales/: app.yml
src/: entry.rs  main.rs
src/define/: args.rs  conf.rs  dict.rs  mod.rs
src/entry/: daemon.rs  serve.rs  version.rs
src/service/: mod.rs  serve.rs
