[package]
name = "capybara"
edition = "2021"
license = "MIT"
build = "build.rs"
authors = ["Kenta Kitagawa <24422888+kentalee@users.noreply.github.com>"]
description = "Multi-scenario port forwarding tool"
homepage = "https://github.com/kentalee/capybara"
repository = "https://github.com/kentalee/capybara"

[build-dependencies]
built = "0.7"

[dependencies]
clap = { version = "4.5.9", features = ["derive","unicode", "wrap_help", "cargo","string"] }
dirs = "5.0.1"
once_cell = "1.19.0"
rust-i18n = "3"
yaml-rust2 = "0.8.1"
log = "0.4.22"
